# rust-chat

./: README.md
client/: Cargo.toml
client/src/: client.rs  main.rs
server/: Cargo.toml  names-long.txt  names.txt  todo.txt
server/src/: main.rs  server.rs
test-client/: Cargo.toml
test-client/src/: client.rs
