[package]
name = "rchat_client"
version = "0.1.0"
authors = ["iyyel <i@iyyel.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
tungstenite = "0.11.1"
url = "2.2.0"