[package]
name = "server"
version = "0.1.0"
authors = ["iyyel <i@iyyel.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-tungstenite = "0.10.0"
async-std = "1.8.0"
futures = "0.3.8"
dotenv = "0.15.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0"
rand = "0.7.3"
