[package]
name = "test-client"
version = "0.1.0"
authors = ["iyyel <i@iyyel.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0"
async-tungstenite = { version = "0.10.0", features = ["async-std-runtime"] }
async-std = "1.8.0"
futures = "0.3.8"
dotenv = "0.15.0"
